--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <html> 
  <head>
-    <title>Template for Websites</title> 
+    <title>Base 10 to Base 2</title> 
 </head>
  <body>
     <p align="center"> 
